Style: Garden scrollbar position fixed with margins, paddings.

--- a/frontend/src/stylesheet/garden/GardenPlanner.scss
+++ b/frontend/src/stylesheet/garden/GardenPlanner.scss
@@ -103,7 +103,8 @@
       overflow: auto;
       width: 95%;
       max-height: 440px;
-      padding: 0 10px 20px;
+      padding: 0 0 10px;
+      margin: 0 20px 20px;
 
 
       ////////////////////////
@@ -138,7 +139,7 @@
         display: flex;
         align-items: center;
         margin: 0 auto;
-        padding: 0 20px;
+        padding: 0 10px 0 0;
 
         .cell {
           @extend %display-flex-center;
